tests/unit-fail-compilation/j057b.c
int f(void) { return 1; }

int x = 1 + f();

int main(void) {
      return 0;
}
